:bug: bug: Resolve table overflow in `open_source_programs.adoc`

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -174,6 +174,10 @@ body.mobile-edge-case .word-break-all {
 	word-break: break-all;
 }
 
+.x-overflow {
+	overflow-x: auto;
+}
+
 /* ================================================== TOC (LIGHT MODE) ============================================== */
 
 #toctitle,
